--- a/pet/pet.html
+++ b/pet/pet.html
@@ -33,7 +33,7 @@ return " ";
     
 <CENTER>
 <FORM>
-<input type="button" value="Soyeon Hwang - Design Challenge Response" onClick="passWord()">
+<input type="button" value="Soyeon Hwang - Google Design Challenge Response" onClick="passWord()">
 </FORM>
 </CENTER>
 <div class = "preface">
